# AgentForge

./: .env.example  .gitignore  CLAUDE.md  MENTOR.md  README.md  ai-agent-stack.md  learning-plan.md  phase0-checklist.md  pyproject.toml  skill-tracking.md
configs/: config.yaml
examples/: langchain_composite.py
src/: __init__.py
src/harness/: __init__.py
src/memory/: __init__.py
src/rag/: __init__.py
src/utils/: __init__.py  config.py  llm_client.py  logger.py
tests/: test_hello.py  test_langchain_composite.py
tests/unit/: test_config.py  test_logger.py
