[project]
name = "agentforge"
version = "0.1.0"
description = "AI Agent Platform - 渐进式开发实践项目"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentForge Team" }]
keywords = ["ai", "agent", "langchain", "langgraph", "rag"]

dependencies = [
    # 核心 Agent 框架
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-community>=0.3",
    # 向量数据库 (macOS Intel 兼容)
    "chromadb>=0.4,<0.5",
    "onnxruntime<1.20",
    # LlamaIndex (RAG 框架)
    "llama-index>=0.10",
    # 数据验证与配置
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # 日志
    "loguru>=0.7.0",
    # 环境变量
    "python-dotenv>=1.0.0",
    # LLM SDK
    "dashscope>=1.14.0",    # 通义千问
    "openai>=1.0.0",        # DeepSeek 兼容 OpenAI 格式
    "langchain-openai>=1.1.12",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    # 代码风格
    "ruff>=0.1.0",
    # 类型检查
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lfq/AgentForge"
Repository = "https://github.com/lfq/AgentForge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
